--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+
 interface Props {
   title: string;
 }
@@ -15,31 +17,6 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <style is:global>
-      :root {
-        --foreground-rgb: 0, 0, 0;
-        --background-start-rgb: 214, 219, 220;
-        --background-end-rgb: 255, 255, 255;
-      }
-
-      @media (prefers-color-scheme: dark) {
-        :root {
-          --foreground-rgb: 255, 255, 255;
-          --background-start-rgb: 0, 0, 0;
-          --background-end-rgb: 0, 0, 0;
-        }
-      }
-
-      body {
-        color: rgb(var(--foreground-rgb));
-        background: linear-gradient(
-            to bottom,
-            transparent,
-            rgb(var(--background-end-rgb))
-          )
-          rgb(var(--background-start-rgb));
-      }
-    </style>
   </head>
   <body>
     <slot />
